--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "serve": "gatsby serve",
+    "clean": "rm -rf public && rm -rf .cache",
     "lint": "eslint --config .eslintrc.js 'src/**/*.{ts,tsx}'",
     "lint:fix": "npm run lint --fix --quiet",
     "tsc": "tsc --noEmit --project tsconfig.json",
@@ -45,6 +46,7 @@
     "prettier-eslint-cli": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-github-corners": "^0.2.1",
     "react-helmet": "^5.2.1",
     "styled-components": "^5.0.0"
   },
@@ -73,8 +75,11 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.0.0",
+    "gatsby-plugin-feed": "^2.3.26",
+    "gatsby-plugin-google-analytics": "^2.1.33",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-sitemap": "^2.2.26",
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-transformer-sharp": "^2.3.12",
